fixed alignment

--- a/css/main.css
+++ b/css/main.css
@@ -71,18 +71,18 @@ a:hover{
 .chapter{
 /*	padding: 10px;*/
 	margin: 50px auto;
-	width:800px;
+	width: 800px;
 /*	padding-bottom: 10px;*/
 }
 
-#interactive{
+.interactive{
 	background-color: #fff;
 	padding: 20px;
 	margin-top: 20px;
 	border:2px dotted gray;
 }
 
-#visual{
+.visual{
 	background-color: #fff;
 	padding: 20px;
 	margin-top: 20px;
@@ -145,7 +145,10 @@ a:hover{
 }
 
 .circle {
-	border:1px solid gray; width:100px; height:100px;
-		border-radius: 50%;
-		margin-left: 170px;
+	border:1px solid gray;
+	width:100px;
+	height:100px;
+	border-radius: 50%;
+	margin: 30px;
+	display: inline-block;
 }
